second step, add libprogpow & new constructor to create different cl Miner by pow type

--- a/libethash-cl/CMakeLists.txt
+++ b/libethash-cl/CMakeLists.txt
@@ -29,6 +29,7 @@ add_custom_target(clbin2h_progpow DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/progpow.h 
 
 set(SOURCES
 	CLMiner.h CLMiner.cpp
+	ProgPowCLMiner.h ProgPowCLMiner.cpp
 	${CMAKE_CURRENT_BINARY_DIR}/ethash.h
 	${CMAKE_CURRENT_BINARY_DIR}/progpow.h
 )
