--- a/libethcore/CMakeLists.txt
+++ b/libethcore/CMakeLists.txt
@@ -16,6 +16,9 @@ target_link_libraries(ethcore PUBLIC devcore ethash PRIVATE hwmon ethash-legacy)
 if(ETHASHCL)
 	target_link_libraries(ethcore PRIVATE ethash-cl)
 endif()
+if(METAL)
+	target_link_libraries(ethcore PRIVATE ethash-metal)
+endif()
 if(ETHASHCUDA)
 	target_link_libraries(ethcore PUBLIC ethash-cuda)
 endif()
