--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ cable_set_build_type(DEFAULT Release CONFIGURATION_TYPES Release RelWithDebInfo)
 option(ETHASHCL "Build with OpenCL mining" ON)
 option(ETHASHCUDA "Build with CUDA mining" ON)
 option(ETHASHCPU "Build with CPU mining (only for development)" OFF)
+option(METAL "Build with METAL mining (APPLE experience)" OFF)
 option(ETHDBUS "Build with D-Bus support" OFF)
 option(APICORE "Build with API Server support" ON)
 option(BINKERN "Install AMD binary kernels" ON)
@@ -42,6 +43,9 @@ function(configureProject)
     endif()
     if (ETHASHCPU)
         add_definitions(-DETH_ETHASHCPU)
+    endif()
+    if (METAL)
+        add_definitions(-DETH_METAL)
     endif()
     if (ETHDBUS)
         add_definitions(-DETH_DBUS)
@@ -75,6 +79,7 @@ message("----------------------------------------------------------------- compo
 message("-- ETHASHCL         Build OpenCL components                      ${ETHASHCL}")
 message("-- ETHASHCUDA       Build CUDA components                        ${ETHASHCUDA}")
 message("-- ETHASHCPU        Build CPU components (only for development)  ${ETHASHCPU}")
+message("-- METAL            Build METAL components (APPLE experience)    ${METAL}")
 message("-- ETHDBUS          Build D-Bus components                       ${ETHDBUS}")
 message("-- APICORE          Build API Server components                  ${APICORE}")
 message("-- BINKERN          Install AMD binary kernels                   ${BINKERN}")
@@ -110,6 +115,10 @@ endif ()
 if (ETHASHCPU)
     add_subdirectory(libethash-cpu)
 endif ()
+if (METAL)
+    add_subdirectory(libmtlpp)
+    add_subdirectory(libminer-metal)
+endif()
 if (APICORE)
     add_subdirectory(libapicore)
 endif()
