metal-miner : use iokit to get PCI GPU device memory size

--- a/libminer-metal/CMakeLists.txt
+++ b/libminer-metal/CMakeLists.txt
@@ -7,5 +7,7 @@ message(STATUS "sdk path: ${SDK_PATH}")
 set(CMAKE_OSX_SYSROOT ${SDK_PATH})
 
 add_library(ethash-metal ${sources} ${headers})
-target_link_libraries(ethash-metal ethcore ethash Boost::thread mtlpp_lib)
+target_link_libraries(ethash-metal ethcore ethash Boost::thread mtlpp_lib
+        "-framework CoreFoundation"
+        "-framework IOKit")
 target_include_directories(ethash-metal PRIVATE .. ../libmtlpp ${CMAKE_CURRENT_BINARY_DIR})
